--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -5,5 +5,5 @@
 @tailwind utilities;
 
 .bg-darkteme {
-    @apply dark:bg-gray-900 dark:text-gray-300 bg-gray-100 transition-colors duration-700 ease-out
+    @apply bg-gray-100 dark:bg-gray-800 text-black dark:text-gray-300 transition-colors duration-700 ease-out
 }
